Started on it but the bug is in scrollspy and updating all visuals for a non-existent security flaw is going to be a pain

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "backbone": "~1.3.3",
-    "bootstrap": "~3.3.7",
+    "bootstrap": "~4.1.3",
     "brfs": "~1.4.3",
     "browserify": "~13.1.1",
     "buffered-spawn": "~3.3.2",
@@ -89,6 +89,7 @@
     "ndarray-fill": "~1.0.1",
     "nightmare": "git://github.com/twolfson/nightmare.git#716336f",
     "nodemon": "~1.11.0",
+    "popper.js": "~1.14.4",
     "request": "~2.78.0",
     "rimraf": "~2.5.4",
     "save-pixels": "~2.3.4",
